🐛(dp): prevent overflow source link

--- a/site/DataPageContent.scss
+++ b/site/DataPageContent.scss
@@ -141,6 +141,11 @@
             @include owid-link-90;
             color: inherit;
         }
+        > div:last-child {
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            overflow: hidden;
+        }
     }
 
     .key-data__title {
